--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,7 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./vendor/normalize.css);
+@import url(./vendor/fonts/__inter/fonts__inter.css);
+@import url(./blocks/header/header.css);
+@import url(./blocks/page/page.css);
+@import url(./blocks/home/home.css);
+@import url(./blocks/about/about.css);
+@import url(./blocks/skills/skills.css);
