--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,4 @@
 @import url(./blocks/home/home.css);
 @import url(./blocks/about/about.css);
 @import url(./blocks/skills/skills.css);
+@import url(./blocks/section-title/section-title.css);
