--- a/src/blocks/skills/skills.css
+++ b/src/blocks/skills/skills.css
@@ -8,7 +8,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #6B6E70;
+  background-image: url(../../images/bg_green.jpg);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
   position: relative;
   padding: 100px 0;
 }
@@ -18,7 +21,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  position: absolute;
   content: '';
-  background-color: rgba(0, 0, 0, .3);
+  position: absolute;
+  background-color: rgba(0, 0, 0, .7);
 }
