--- a/src/blocks/home/__container/home__container.css
+++ b/src/blocks/home/__container/home__container.css
@@ -1,8 +1,6 @@
 .home__container {
-  width: 60%;
+  width: 35%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 200px 0;
-  margin: 0;
+  padding: 0;
+  margin: 200px 0;
 }
